mapping out gridlayout

--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="TechTrenders" href="css/style.css">
+    <title>TechTrenders</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="wrapper">
-        
+        <header>
+            <h1>HEJ</h1>
+        </header>
+        <nav>
+            <ul>
+    
+            </ul>
+        </nav>
+        <article id="ar1"></article>
+        <article id="ar2"></article>
+        <article id="ar3"></article>
+        <aside></aside>
     </div>
 </body>
 </html>
