finished main page structure

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         </header>
         <nav>
             <ul>
-    
+                <li><a href="">Nyheter</a></li>
+                <li><a href="">Tester</a></li>
+                <li><a href="">Kontakt</a></li>
             </ul>
         </nav>
         <article id="ar1"></article>
