started adding content and finalizing mainpage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="wrapper">
         <header>
-            <h1>HEJ</h1>
+            <h1>TechTrenders</h1>
         </header>
         <nav>
             <ul>
@@ -18,10 +18,22 @@
                 <li><a href="">Kontakt</a></li>
             </ul>
         </nav>
-        <article id="ar1"></article>
-        <article id="ar2"></article>
-        <article id="ar3"></article>
-        <aside></aside>
+        <article id="ar1">
+            <img src="img/template.png" alt=""> 
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse totam optio eveniet fugit iste placeat maxime, dolore quia! Ratione ullam sit repellendus sequi numquam magni eius ea aspernatur eaque obcaecati!</p>
+        </article>
+        <article id="ar2">
+            <img src="img/template.png" alt="">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius distinctio facilis libero. Delectus ut cum quis recusandae illum, quia, animi aut reiciendis ex nam, amet iste illo ratione commodi cupiditate!</p>
+        </article>
+        <article id="ar3">
+            <img src="img/template.png" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quos ullam vitae quod aspernatur. Repellendus, quam mollitia. Nulla eum reprehenderit voluptas eos dolores dolorum! Eveniet dignissimos illo alias sunt voluptatum.</p>
+        </article>
+        <aside>
+            <img src="img/template.png" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum consequuntur incidunt corporis molestias repudiandae explicabo assumenda atque minus odio labore ipsa ad illum ducimus hic, quisquam tempora nihil perspiciatis? Atque.</p>
+        </aside>
     </div>
 </body>
 </html>
