sheeesh, fixed mainpage

--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
         </header>
         <nav>
             <ul>
-                <li><a href="">Nyheter</a></li>
+                <li><a href="index.html">Nyheter</a></li>
                 <li><a href="">Tester</a></li>
                 <li><a href="">Kontakt</a></li>
             </ul>
         </nav>
         <article id="ar1">
-            <img src="img/template.png" alt=""> 
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse totam optio eveniet fugit iste placeat maxime, dolore quia! Ratione ullam sit repellendus sequi numquam magni eius ea aspernatur eaque obcaecati!</p>
+            <img src="img/futuristic_car.png" alt=""> 
+            <p>Upplev framtidens transport med vår flygande bil! Denna innovation kombinerar marktransportens bekvämlighet med friheten i luften, vilket öppnar upp nya möjligheter för personlig mobilitet och omdefinierar hur vi reser</p>
         </article>
         <article id="ar2">
-            <img src="img/template.png" alt="">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius distinctio facilis libero. Delectus ut cum quis recusandae illum, quia, animi aut reiciendis ex nam, amet iste illo ratione commodi cupiditate!</p>
+            <img src="img/nanobots.png" alt="">
+            <p>Träda in i en ny era av medicin med nanorobotar, små enheter som kan injiceras i blodet för att bekämpa specifika patogener. Denna teknologi erbjuder en precision och effektivitet som öppnar upp för banbrytande framsteg inom hälsa och medicin.</p>
         </article>
         <article id="ar3">
-            <img src="img/template.png" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quos ullam vitae quod aspernatur. Repellendus, quam mollitia. Nulla eum reprehenderit voluptas eos dolores dolorum! Eveniet dignissimos illo alias sunt voluptatum.</p>
+            <img src="img/dyson_sphere.png" alt="">
+            <p>Forskare utforskar möjligheten att bygga en Dyson-sfär, en gigantisk struktur som omsluter en stjärna för att samla in dess energi. Denna idé öppnar dörren till en framtid med hållbar och obegränsad energi.</p>
         </article>
         <aside>
-            <img src="img/template.png" alt="">
+            <img id="ad" src="misc/template.png" alt="">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum consequuntur incidunt corporis molestias repudiandae explicabo assumenda atque minus odio labore ipsa ad illum ducimus hic, quisquam tempora nihil perspiciatis? Atque.</p>
         </aside>
     </div>
