Adjusted some measurements

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html">Nyheter</a></li>
                 <li><a href="">Tester</a></li>
-                <li><a href="">Kontakt</a></li>
+                <li><a href="/kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
         <article id="ar1">
@@ -31,8 +31,7 @@
             <p>Forskare utforskar möjligheten att bygga en Dyson-sfär, en gigantisk struktur som omsluter en stjärna för att samla in dess energi. Denna idé öppnar dörren till en framtid med hållbar och obegränsad energi.</p>
         </article>
         <aside>
-            <img id="ad" src="misc/template.png" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum consequuntur incidunt corporis molestias repudiandae explicabo assumenda atque minus odio labore ipsa ad illum ducimus hic, quisquam tempora nihil perspiciatis? Atque.</p>
+           
         </aside>
     </div>
 </body>
