Contact Page started

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="wrapper">
+    <div id="wrapper_main">
         <header>
             <h1>TechTrenders</h1>
         </header>
@@ -20,15 +20,24 @@
         </nav>
         <article id="ar1">
             <img src="img/futuristic_car.png" alt=""> 
-            <p>Upplev framtidens transport med vår flygande bil! Denna innovation kombinerar marktransportens bekvämlighet med friheten i luften, vilket öppnar upp nya möjligheter för personlig mobilitet och omdefinierar hur vi reser</p>
+            <section id="art_sec">
+                <h2>Flygande bil</h2>
+                <p id="art_text">Upplev framtidens transport med vår flygande bil! Denna innovation kombinerar marktransportens bekvämlighet med friheten i luften, vilket öppnar upp nya möjligheter för personlig mobilitet och omdefinierar hur vi reser</p>
+            </section>
         </article>
         <article id="ar2">
             <img src="img/nanobots.png" alt="">
-            <p>Träda in i en ny era av medicin med nanorobotar, små enheter som kan injiceras i blodet för att bekämpa specifika patogener. Denna teknologi erbjuder en precision och effektivitet som öppnar upp för banbrytande framsteg inom hälsa och medicin.</p>
+            <section id="art_sec">
+                <h2>Nanobottar</h2>
+                <p id="art_text">Träda in i en ny era av medicin med nanorobotar, små enheter som kan injiceras i blodet för att bekämpa specifika patogener. Denna teknologi erbjuder en precision och effektivitet som öppnar upp för banbrytande framsteg inom hälsa och medicin.</p>
+            </section>
         </article>
         <article id="ar3">
             <img src="img/dyson_sphere.png" alt="">
-            <p>Forskare utforskar möjligheten att bygga en Dyson-sfär, en gigantisk struktur som omsluter en stjärna för att samla in dess energi. Denna idé öppnar dörren till en framtid med hållbar och obegränsad energi.</p>
+            <section id="art_sec">
+                <h2>Dyson-sfär</h2>
+                <p id="art_text">Forskare utforskar möjligheten att bygga en Dyson-sfär, en gigantisk struktur som omsluter en stjärna för att samla in dess energi. Denna idé öppnar dörren till en framtid med hållbar och obegränsad energi.</p>
+            </section>
         </article>
         <aside>
            
