--- a/kontakt.html
+++ b/kontakt.html
@@ -2,12 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TechTrenders</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <img id="r" src="img/lp_image.jpg" alt="">
+    <div id="wrapper_contact">
+        <header>
+            <h1>TechTrenders</h1>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Nyheter</a></li>
+                <li><a href="">Tester</a></li>
+                <li><a href="/kontakt.html">Kontakt</a></li>
+            </ul>
+        </nav>
+        <section id="contact_cards">
+            <div class="info-card">
+                <img src="misc/template.png" alt="">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae dicta alias dolor. Repellat, ab minus?</p>
+            </div>
+            <div class="info-card">
+                <img src="misc/template.png" alt="">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae dicta alias dolor. Repellat, ab minus?</p>
+            </div>
+            <div class="info-card">
+                <img src="misc/template.png" alt="">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae dicta alias dolor. Repellat, ab minus?</p>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
