--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Nyheter</a></li>
-                <li><a href="">Tester</a></li>
-                <li><a href="/kontakt.html">Kontakt</a></li>
+                <li><a href="tester.html">Tester</a></li>
+                <li><a href="kontakt.html">Kontakta oss</a></li>
             </ul>
         </nav>
         <article id="ar1">
