--- a/kontakt.html
+++ b/kontakt.html
@@ -6,6 +6,7 @@
     <title>TechTrenders</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div id="wrapper_contact">
         <header>
@@ -21,15 +22,30 @@
         <section id="contact_cards">
             <div class="info-card">
                 <img src="misc/template.png" alt="">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae dicta alias dolor. Repellat, ab minus?</p>
+                <ul>
+                    <li><p id="title">CEO</p></li>
+                    <li><p>Felix Sjöberg</p></li>
+                    <li><p>+46 234 567 890</p></li>
+                    <li><p>felixsjoberg@notarealmail.com</p></li>
+                </ul>
             </div>
             <div class="info-card">
                 <img src="misc/template.png" alt="">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae dicta alias dolor. Repellat, ab minus?</p>
+                <ul>
+                    <li><p id="title">Janitor</p></li>
+                    <li><p>Pax Hruska</p></li>
+                    <li><p>+46 234 567 890</p></li>
+                    <li><p>paxhruska@notarealmail.com</p></li>
+                </ul>
             </div>
             <div class="info-card">
                 <img src="misc/template.png" alt="">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae dicta alias dolor. Repellat, ab minus?</p>
+                <ul>
+                    <li><p id="title">Senior Journalist</p></li>
+                    <li><p>Peo Pininski</p></li>
+                    <li><p>+46 234 567 890</p></li>
+                    <li><p>peopisinski@notarealmail.com</p></li>
+                </ul>
             </div>
         </section>
     </div>
