--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Nyheter</a></li>
-                <li><a href="tester.html">Tester</a></li>
-                <li><a href="kontakt.html">Kontakta oss</a></li>
+                <li><a href="about_us.html">Om oss</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
         <article id="ar1">
@@ -40,7 +40,7 @@
             </section>
         </article>
         <aside>
-            <img src="misc/ad_picture.jpg" alt="Picture of an ad" id="ad_pic">
+            <img src="img/ad_picture.jpg" alt="Picture of an ad" id="ad_pic">
         </aside>
     </div>
 </body>
