--- a/kontakt.html
+++ b/kontakt.html
@@ -15,13 +15,13 @@
         <nav>
             <ul>
                 <li><a href="index.html">Nyheter</a></li>
-                <li><a href="">Tester</a></li>
-                <li><a href="/kontakt.html">Kontakt</a></li>
+                <li><a href="about_us.html">Om oss</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
         <section id="contact_cards">
             <div class="info-card">
-                <img src="misc/template.png" alt="">
+                <img src="img/ceo_pic.jpg" alt="Picture of the CEO">
                 <ul>
                     <li><p id="title">CEO</p></li>
                     <li><p>Felix Sjöberg</p></li>
@@ -30,7 +30,7 @@
                 </ul>
             </div>
             <div class="info-card">
-                <img src="misc/template.png" alt="">
+                <img src="img/janitor_pic.jpg" alt="Picture of the janitor">
                 <ul>
                     <li><p id="title">Janitor</p></li>
                     <li><p>Pax Hruska</p></li>
@@ -39,7 +39,7 @@
                 </ul>
             </div>
             <div class="info-card">
-                <img src="misc/template.png" alt="">
+                <img src="img/seniorjournalist_pic.jpg" alt="Picture of the senior journalist">
                 <ul>
                     <li><p id="title">Senior Journalist</p></li>
                     <li><p>Peo Pininski</p></li>
