--- a/index.html
+++ b/index.html
@@ -20,27 +20,29 @@
         </nav>
         <article id="ar1">
             <img src="img/futuristic_car.png" alt="A picture of a flying car" class="art_pics"> 
-            <section id="art_sec">
+            <section class="art_sec">
                 <h2>Flygande bil</h2>
-                <p id="art_text">Upplev framtidens transport med vår flygande bil! Denna innovation kombinerar marktransportens bekvämlighet med friheten i luften, vilket öppnar upp nya möjligheter för personlig mobilitet och omdefinierar hur vi reser</p>
+                <p class="art_text">Upplev framtidens transport med vår flygande bil! Denna innovation kombinerar marktransportens bekvämlighet med friheten i luften, vilket öppnar upp nya möjligheter för personlig mobilitet och omdefinierar hur vi reser</p>
             </section>
         </article>
         <article id="ar2">
             <img src="img/nanobots.png" alt="A picture of nanobots" class="art_pics">
-            <section id="art_sec">
+            <section class="art_sec">
                 <h2>Nanobottar</h2>
-                <p id="art_text">Träda in i en ny era av medicin med nanorobotar, små enheter som kan injiceras i blodet för att bekämpa specifika patogener. Denna teknologi erbjuder en precision och effektivitet som öppnar upp för banbrytande framsteg inom hälsa och medicin.</p>
+                <p class="art_text">Träda in i en ny era av medicin med nanorobotar, små enheter som kan injiceras i blodet för att bekämpa specifika patogener. Denna teknologi erbjuder en precision och effektivitet som öppnar upp för banbrytande framsteg inom hälsa och medicin.</p>
             </section>
         </article>
         <article id="ar3">
             <img src="img/dyson_sphere.png" alt="A picture of a dyson sphere" class="art_pics">
-            <section id="art_sec">
+            <section class="art_sec">
                 <h2>Dyson-sfär</h2>
-                <p id="art_text">Forskare utforskar möjligheten att bygga en Dyson-sfär, en gigantisk struktur som omsluter en stjärna för att samla in dess energi. Denna idé öppnar dörren till en framtid med hållbar och obegränsad energi.</p>
+                <p class="art_text">Forskare utforskar möjligheten att bygga en Dyson-sfär, en gigantisk struktur som omsluter en stjärna för att samla in dess energi. Denna idé öppnar dörren till en framtid med hållbar och obegränsad energi.</p>
             </section>
         </article>
         <aside>
-            <img src="img/ad_picture.jpg" alt="Picture of an ad" id="ad_pic">
+            <a href="error.html" target="_blank">
+                <img src="img/ad_picture.jpg" alt="Picture of an ad" id="ad_pic">
+            </a>
         </aside>
     </div>
 </body>
